--- a/index.html
+++ b/index.html
@@ -144,13 +144,13 @@
                                 <img src="images/River Sand Garde A 3.jpg" alt="River Sand Grade A" class="w-full h-full object-cover">
                             </div>
                             <div class="carousel-item absolute inset-0">
-                                <video class="w-full h-full object-cover" controls>
+                                <video class="w-full h-full object-cover" controls muted>
                                     <source src="images/Video Grade A.mp4" type="video/mp4">
                                     Your browser does not support the video tag.
                                 </video>
                             </div>
                             <div class="carousel-item absolute inset-0">
-                                <video class="w-full h-full object-cover" controls>
+                                <video class="w-full h-full object-cover" controls muted>
                                     <source src="images/River Video 2.mp4" type="video/mp4">
                                     Your browser does not support the video tag.
                                 </video>
@@ -181,7 +181,7 @@
                                 <img src="images/River Sand Grade B 2.jpg" alt="River Sand Grade B" class="w-full h-full object-cover">
                             </div>
                             <div class="carousel-item absolute inset-0">
-                                <video class="w-full h-full object-cover" controls>
+                                <video class="w-full h-full object-cover" controls muted autoplay>
                                     <source src="images/Video Grade B.mp4" type="video/mp4">
                                     Your browser does not support the video tag.
                                 </video>
@@ -275,10 +275,10 @@
                     </div>
                     <div class="p-6">
                         <h3 class="text-xl font-bold mb-2 text-gray-800">Plastering Sand</h3>
-                        <p class="text-gray-600 mb-4">Economical river sand for basic construction needs. Suitable for filling and leveling work.</p>
+                        <p class="text-gray-600 mb-4">Economical Plastering sand for basic construction needs. Suitable for filling and leveling work.</p>
                         <p class="text-2xl font-bold text-sand mb-4">Starting from ₹1,500/ton</p>
                         <div class="space-y-2">
-                            <button onclick="sendWhatsAppToBoth('Hi, I\'m interested in River Sand Grade C')" class="block w-full bg-green-500 text-white text-center py-2 rounded-lg hover:bg-green-600 transition">💬 WhatsApp Us</button>
+                            <button onclick="sendWhatsAppToBoth('Hi, I\'m interested in Plastering Sand')" class="block w-full bg-green-500 text-white text-center py-2 rounded-lg hover:bg-green-600 transition">💬 WhatsApp Us</button>
                             <a href="tel:9845208446" class="block w-full bg-blue-500 text-white text-center py-2 rounded-lg hover:bg-blue-600 transition">📞 Call Now</a>
                         </div>
                     </div>
@@ -457,6 +457,26 @@
                         <p class="text-2xl font-bold text-sand mb-4">Starting from ₹50/bag</p>
                         <div class="space-y-2">
                             <button onclick="sendWhatsAppToBoth('Hi, I\'m interested in Sewing Services')" class="block w-full bg-green-500 text-white text-center py-2 rounded-lg hover:bg-green-600 transition">💬 WhatsApp Us</button>
+                            <a href="tel:9845208446" class="block w-full bg-blue-500 text-white text-center py-2 rounded-lg hover:bg-blue-600 transition">📞 Call Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="product-card bg-white rounded-xl shadow-lg overflow-hidden transition-all duration-300">
+                    <div class="relative h-64 bg-gray-200">
+                        <div class="carousel-container h-full">
+                            <div class="carousel-item active absolute inset-0">
+                                <img src="images/baggedsand.jpg" alt="Bagged Sand" class="w-full h-full object-cover">
+                            </div>
+                        </div>
+                        <button class="carousel-prev absolute left-2 top-1/2 transform -translate-y-1/2 bg-black bg-opacity-50 text-white p-2 rounded-full hover:bg-opacity-75 transition">‹</button>
+                        <button class="carousel-next absolute right-2 top-1/2 transform -translate-y-1/2 bg-black bg-opacity-50 text-white p-2 rounded-full hover:bg-opacity-75 transition">›</button>
+                    </div>
+                    <div class="p-6">
+                        <h3 class="text-xl font-bold mb-2 text-gray-800">Bagged Sand Available</h3>
+                        <p class="text-gray-600 mb-4">Professional bagged sand for convenient storage and transportation.</p>
+                        <p class="text-2xl font-bold text-sand mb-4">Starting from ₹200/bag</p>
+                        <div class="space-y-2">
+                            <button onclick="sendWhatsAppToBoth('Hi, I\'m interested in bagged sand')" class="block w-full bg-green-500 text-white text-center py-2 rounded-lg hover:bg-green-600 transition">💬 WhatsApp Us</button>
                             <a href="tel:9845208446" class="block w-full bg-blue-500 text-white text-center py-2 rounded-lg hover:bg-blue-600 transition">📞 Call Now</a>
                         </div>
                     </div>
@@ -643,10 +663,10 @@
                                 <option value="" disabled selected>Select Sand Type</option>
                                 <option value="concrete">River Sand</option>
                                 <option value="masonry">Play Sand</option>
-                                <option value="play">Red Soil</option>
+                                <!-- <option value="play">Red Soil</option> -->
                                 <option value="play">Sea Sand</option>
-                                <option value="play">Pool Sand</option>
-                                <option value="play">Pebbles</option>
+                                <!-- <option value="play">Pool Sand</option> -->
+                                <!-- <option value="play">Pebbles</option> -->
                                 <option value="play">Others</option>
                             </select>
                             <input type="text" placeholder="Estimated Quantity (e.g., tons, yards)" class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-yellow-500 focus:outline-none">
