--- a/index.html
+++ b/index.html
@@ -144,13 +144,13 @@
                                 <img src="images/River Sand Garde A 3.jpg" alt="River Sand Grade A" class="w-full h-full object-cover">
                             </div>
                             <div class="carousel-item absolute inset-0">
-                                <video class="w-full h-full object-cover" muted autoplay loop playsinline>
+                                <video class="w-full h-full object-cover" controls>
                                     <source src="images/Video Grade A.mp4" type="video/mp4">
                                     Your browser does not support the video tag.
                                 </video>
                             </div>
                             <div class="carousel-item absolute inset-0">
-                                <video class="w-full h-full object-cover" muted autoplay loop playsinline>
+                                <video class="w-full h-full object-cover" controls muted>
                                     <source src="images/River Video 2.mp4" type="video/mp4">
                                     Your browser does not support the video tag.
                                 </video>
@@ -181,7 +181,7 @@
                                 <img src="images/River Sand Grade B 2.jpg" alt="River Sand Grade B" class="w-full h-full object-cover">
                             </div>
                             <div class="carousel-item absolute inset-0">
-                                <video class="w-full h-full object-cover" muted autoplay loop playsinline>
+                                <video class="w-full h-full object-cover" controls muted autoplay>
                                     <source src="images/Video Grade B.mp4" type="video/mp4">
                                     Your browser does not support the video tag.
                                 </video>
@@ -209,13 +209,13 @@
                                 <img src="images/Normal Sand Grade C  1.jpg" alt="River Sand Grade C" class="w-full h-full object-cover">
                             </div>
                             <div class="carousel-item absolute inset-0">
-                                <video class="w-full h-full object-cover" muted autoplay loop playsinline>
+                                <video class="w-full h-full object-cover" controls>
                                     <source src="images/Normal Grade C 2.mp4" type="video/mp4">
                                     Your browser does not support the video tag.
                                 </video>
                             </div>
                             <div class="carousel-item absolute inset-0">
-                                <video class="w-full h-full object-cover" muted autoplay loop playsinline>
+                                <video class="w-full h-full object-cover" controls>
                                     <source src="images/Normal Grade C 3.mp4" type="video/mp4">
                                     Your browser does not support the video tag.
                                 </video>
@@ -301,7 +301,7 @@
                                 <img src="images/Sea Sand 4.jpg" alt="Sea Sand" class="w-full h-full object-cover">
                             </div>
                             <div class="carousel-item absolute inset-0">
-                                <video class="w-full h-full object-cover" muted autoplay loop playsinline>
+                                <video class="w-full h-full object-cover" controls>
                                     <source src="images/Sea Sand Video 5.mp4" type="video/mp4">
                                     Your browser does not support the video tag.
                                 </video>
@@ -344,13 +344,13 @@
                                 <img src="images/Play Area 6.jpg" alt="Play Area Sand" class="w-full h-full object-cover">
                             </div>
                             <div class="carousel-item absolute inset-0">
-                                <video class="w-full h-full object-cover" muted autoplay loop playsinline>
+                                <video class="w-full h-full object-cover" controls>
                                     <source src="images/Play Area video1.mp4" type="video/mp4">
                                     Your browser does not support the video tag.
                                 </video>
                             </div>
                             <div class="carousel-item absolute inset-0">
-                                <video class="w-full h-full object-cover" muted autoplay loop playsinline>
+                                <video class="w-full h-full object-cover" controls>
                                     <source src="images/Play Area video 2.mp4" type="video/mp4">
                                     Your browser does not support the video tag.
                                 </video>
@@ -384,7 +384,7 @@
                                 <img src="images/Ground Sand 3.jpg" alt="Cricket/Hockey Ground Sand" class="w-full h-full object-cover">
                             </div>
                             <div class="carousel-item absolute inset-0">
-                                <video class="w-full h-full object-cover" muted autoplay loop playsinline>
+                                <video class="w-full h-full object-cover" controls>
                                     <source src="images/Ground Sand  video 1.mp4" type="video/mp4">
                                     Your browser does not support the video tag.
                                 </video>
@@ -436,13 +436,13 @@
                                 <img src="images/Sewing 1.jpg" alt="Sewing Service" class="w-full h-full object-cover">
                             </div>
                             <div class="carousel-item absolute inset-0">
-                                <video class="w-full h-full object-cover" muted autoplay loop playsinline>
+                                <video class="w-full h-full object-cover" controls>
                                     <source src="images/Sewing video1.mp4" type="video/mp4">
                                     Your browser does not support the video tag.
                                 </video>
                             </div>
                             <div class="carousel-item absolute inset-0">
-                                <video class="w-full h-full object-cover" muted autoplay loop playsinline>
+                                <video class="w-full h-full object-cover" controls>
                                     <source src="images/Sewing video 2.mp4" type="video/mp4">
                                     Your browser does not support the video tag.
                                 </video>
