--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
             <div class="max-w-4xl mx-auto bg-gray-50 p-8 rounded-lg shadow-lg">
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
                     <!-- Contact Form -->
-                    <form id="quoteForm">
+                    <form id="quoteForm" method="post" action="https://script.google.com/macros/s/AKfycbzRwj8OEF1a8uuAKlT9qlcIss8Ozv9c-pt_3sAJsjFwfrDY4fnPU25Lg6fUUHnMifMcEg/exec">
                         <div class="space-y-4">
                             <input type="text" name="Customer_Name" placeholder="Your Name" required class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-yellow-500 focus:outline-none">
                             <input type="tel" name="Customer_Phone" placeholder="Phone Number" required class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-yellow-500 focus:outline-none">
@@ -811,32 +811,32 @@ if (quoteForm) {
     quoteForm.addEventListener('submit', function(e) {
         e.preventDefault();
 
-        // The URL of your Google Apps Script web app
-        const url = "https://script.google.com/macros/s/AKfycbzRwj8OEF1a8uuAKlT9qlcIss8Ozv9c-pt_3sAJsjFwfrDY4fnPU25Lg6fUUHnMifMcEg/exec";
-        const formData = new FormData(quoteForm);
+    //     // The URL of your Google Apps Script web app
+    //     const url = "https://script.google.com/macros/s/AKfycbzRwj8OEF1a8uuAKlT9qlcIss8Ozv9c-pt_3sAJsjFwfrDY4fnPU25Lg6fUUHnMifMcEg/exec";
+    //     const formData = new FormData(quoteForm);
 
-        fetch(url, {
-                method: 'POST',
-                body: formData
-            })
-            .then(response => response.json())
-            .then(data => {
-                if (data.result === 'success') {
-                    // This is where you can show a success message to the user
-                    alert('Thank you for your request! We will get back to you shortly.');
-                    quoteForm.reset();
-                } else {
-                    // This is where you can handle errors
-                    console.error('Error:', data.error);
-                    alert('There was an error submitting your request. Please try again.');
-                }
-            })
-            .catch(error => {
-                console.error('Fetch Error:', error);
-                alert('There was an error submitting your request. Please try again.');
-            });
-    });
-        }
+    //     fetch(url, {
+    //             method: 'POST',
+    //             body: formData
+    //         })
+    //         .then(response => response.json())
+    //         .then(data => {
+    //             if (data.result === 'success') {
+    //                 // This is where you can show a success message to the user
+    //                 alert('Thank you for your request! We will get back to you shortly.');
+    //                 quoteForm.reset();
+    //             } else {
+    //                 // This is where you can handle errors
+    //                 console.error('Error:', data.error);
+    //                 alert('There was an error submitting your request. Please try again.');
+    //             }
+    //         })
+    //         .catch(error => {
+    //             console.error('Fetch Error:', error);
+    //             alert('There was an error submitting your request. Please try again.');
+    //         });
+    // });
+    //     }
 
         // JavaScript for Mobile Menu and Header Scroll Effect
         document.addEventListener('DOMContentLoaded', function() {
